Debugging an refactoring client and handshake code